--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
         <div>Build, Break, Fix, Repeat.</div>
         <div class="nav-links">
           <a href="https://github.com/Karthikheyaa" target="_blank" rel="noopener">GitHub</a>
-          <a href="https://www.kaggle.com/karthikheyaa" target="_blank" rel="noopener">Kaggle</a>
+          <a href="https://www.linkedin.com/in/karthikheyaa" target="_blank" rel="noopener">LinkedIn</a>
           <a data-email-link>Email</a>
         </div>
       </div>
