Update hero copy for DE positioning

--- a/index.html
+++ b/index.html
@@ -32,11 +32,10 @@
       <section id="home" class="hero container" data-section="home">
         <div>
           <div class="tag">Data science, analytics & ML ops</div>
-          <h1>Building insight-driven products that people love to use.</h1>
+          <h1>Building reliable data pipelines.</h1>
           <p>
-            I partner with product, engineering, and design to ship ML features, decision frameworks, and
-            dashboards that keep teams focused on real outcomes. From research through production, I turn data
-            into reliable, usable experiences.
+            MS Data Science student focused on Data Engineering. I build AWS-based ETL pipelines and analytics-ready
+            datasets using Python, SQL, Spark, and Airflow— with validation, observability, and performance in mind.
           </p>
           <div class="hero-cta">
             <a class="button" href="#projects">See my work</a>
