Rewrite About section to avoid repetition

--- a/index.html
+++ b/index.html
@@ -53,29 +53,29 @@
           <div class="section-header">
             <div>
               <p class="tag">About</p>
-              <h2 class="section-title">Hi, I'm Karth. I help teams ship trustworthy data products.</h2>
+              <h2 class="section-title">Hi, I’m Karthikheyaa Kurra. I build pipelines with quality checks, monitoring, and clear docs.</h2>
             </div>
           </div>
           <div class="badge-grid">
             <div class="badge-card">
               <div class="badge-icon">🧭</div>
               <div>
-                <h4 class="card-title">Translate ambiguity</h4>
-                <p class="card-desc">Partner with stakeholders to frame crisp questions, define success, and choose the right experiments.</p>
+                <h4 class="card-title">Build</h4>
+                <p class="card-desc">Raw → clean tables: Python/SQL ETL, incremental loads, reusable workflows.</p>
               </div>
             </div>
             <div class="badge-card">
               <div class="badge-icon">⚡</div>
               <div>
-                <h4 class="card-title">Ship quickly, safely</h4>
-                <p class="card-desc">Proofs of concept become production-ready pipelines with observability, alerts, and feedback loops.</p>
+                <h4 class="card-title">Reliability</h4>
+                <p class="card-desc">Data quality checks, logging/alerts, and rerunnable jobs.</p>
               </div>
             </div>
             <div class="badge-card">
               <div class="badge-icon">📚</div>
               <div>
-                <h4 class="card-title">Teach the craft</h4>
-                <p class="card-desc">Mentor analysts and engineers with playbooks, templates, and pairing sessions grounded in real work.</p>
+                <h4 class="card-title">Communicate</h4>
+                <p class="card-desc">READMEs, diagrams, and short write-ups that make projects easy to evaluate.</p>
               </div>
             </div>
           </div>
