Rewrite contact section for DE job search and remove Kaggle

--- a/blog.html
+++ b/blog.html
@@ -60,10 +60,10 @@
 
     <footer class="footer">
       <div class="container footer-row">
-        <div>Build, Break, Fix, Repeat.</div>
+        <div>Ship pipelines. Validate data. Monitor runs.</div>
         <div class="nav-links">
           <a href="https://github.com/Karthikheyaa" target="_blank" rel="noopener">GitHub</a>
-          <a href="https://www.kaggle.com/karthikheyaa" target="_blank" rel="noopener">Kaggle</a>
+          <a href="https://www.linkedin.com/in/karthikheyaa" target="_blank" rel="noopener">LinkedIn</a>
           <a data-email-link>Email</a>
         </div>
       </div>
