Add original arXiv-style thumbnail for semilinear project

--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
       <section id="home" class="hero container" data-section="home">
         <div>
           <div class="tag">Data science, analytics & ML ops</div>
-          <h1>Building insight-driven products that people love to use.</h1>
+          <h1>Building reliable data pipelines.</h1>
           <p>
-            I partner with product, engineering, and design to ship ML features, decision frameworks, and
-            dashboards that keep teams focused on real outcomes. From research through production, I turn data
-            into reliable, usable experiences.
+            MS Data Science student focused on Data Engineering. I build AWS-based ETL pipelines and analytics-ready
+            datasets using Python, SQL, Spark, and Airflow— with validation, observability, and performance in mind.
           </p>
           <div class="hero-cta">
             <a class="button" href="#projects">See my work</a>
-            <a class="button secondary" data-email-link href="#contact">Book a call</a>
+            <a class="button secondary" data-email-link href="#contact">Contact</a>
           </div>
           <div class="stat-row" data-stats></div>
         </div>
@@ -54,29 +53,29 @@
           <div class="section-header">
             <div>
               <p class="tag">About</p>
-              <h2 class="section-title">Hi, I'm Karth. I help teams ship trustworthy data products.</h2>
+              <h2 class="section-title">Hi, I’m Karthikheyaa Kurra. I build pipelines with quality checks, monitoring, and clear docs.</h2>
             </div>
           </div>
           <div class="badge-grid">
             <div class="badge-card">
               <div class="badge-icon">🧭</div>
               <div>
-                <h4 class="card-title">Translate ambiguity</h4>
-                <p class="card-desc">Partner with stakeholders to frame crisp questions, define success, and choose the right experiments.</p>
+                <h4 class="card-title">Build</h4>
+                <p class="card-desc">Raw → clean tables: Python/SQL ETL, incremental loads, reusable workflows.</p>
               </div>
             </div>
             <div class="badge-card">
               <div class="badge-icon">⚡</div>
               <div>
-                <h4 class="card-title">Ship quickly, safely</h4>
-                <p class="card-desc">Proofs of concept become production-ready pipelines with observability, alerts, and feedback loops.</p>
+                <h4 class="card-title">Reliability</h4>
+                <p class="card-desc">Data quality checks, logging/alerts, and rerunnable jobs.</p>
               </div>
             </div>
             <div class="badge-card">
               <div class="badge-icon">📚</div>
               <div>
-                <h4 class="card-title">Teach the craft</h4>
-                <p class="card-desc">Mentor analysts and engineers with playbooks, templates, and pairing sessions grounded in real work.</p>
+                <h4 class="card-title">Communicate</h4>
+                <p class="card-desc">READMEs, diagrams, and short write-ups that make projects easy to evaluate.</p>
               </div>
             </div>
           </div>
@@ -87,11 +86,11 @@
         <div class="container">
           <div class="section-header">
             <div>
-              <p class="tag">Capabilities</p>
-              <h2 class="section-title">How I work end-to-end</h2>
-              <p class="section-subtitle">From research to production, here is how I keep data products reliable.</p>
+              <p class="tag">Skills</p>
+              <h2 class="section-title">Data Engineering</h2>
+              <p class="section-subtitle">ETL/ELT, warehouse modeling, and operational reliability.</p>
             </div>
-            <a class="button secondary" data-email-link>Let's collaborate</a>
+            <a class="button secondary" data-email-link>Contact</a>
           </div>
           <div class="badge-grid" data-skills></div>
         </div>
@@ -102,8 +101,8 @@
           <div class="section-header">
             <div>
               <p class="tag">Projects</p>
-              <h2 class="section-title">Recent builds and case studies</h2>
-              <p class="section-subtitle">Deployed ML, analytics accelerators, and data reliability work.</p>
+              <h2 class="section-title">Featured projects</h2>
+              <p class="section-subtitle">Three projects I'm actively building right now.</p>
             </div>
             <a class="button" href="work.html">View all</a>
           </div>
@@ -115,8 +114,8 @@
         <div class="container">
           <div class="section-header">
             <div>
-              <p class="tag">Highlights</p>
-              <h2 class="section-title">Moments I'm proud of</h2>
+              <p class="tag">Engineering</p>
+              <h2 class="section-title">What I optimize for</h2>
             </div>
           </div>
           <div class="list" data-highlights></div>
@@ -136,30 +135,43 @@
         </div>
       </section>
 
+
+      <section id="milestones" class="section">
+        <div class="container">
+          <div class="section-header">
+            <div>
+              <p class="tag">Milestones</p>
+              <h2 class="section-title">Certifications</h2>
+            </div>
+          </div>
+          <div class="list" data-milestones></div>
+        </div>
+      </section>
+
       <section id="contact" class="section">
         <div class="container">
           <div class="section-header">
             <div>
               <p class="tag">Contact</p>
-              <h2 class="section-title">Have a project in mind?</h2>
-              <p class="section-subtitle">Tell me what you're building and let's create the right data plan together.</p>
+              <h2 class="section-title">Open to Data Engineering roles</h2>
+              <p class="section-subtitle">If you think I’m a fit, email me — I reply quickly.</p>
             </div>
           </div>
           <div class="badge-grid">
             <div class="badge-card">
               <div class="badge-icon">📮</div>
               <div>
-                <h4 class="card-title">Drop a note</h4>
-                <p class="card-desc">Share your idea, target metrics, and timelines. I'll reply within two business days.</p>
-                <a class="button" data-email-link>Send an email</a>
+                <h4 class="card-title">Email</h4>
+                <p class="card-desc">Best way to reach me. Include the role link + timeline.</p>
+                <a class="button" data-email-link>Email me</a>
               </div>
             </div>
             <div class="badge-card">
               <div class="badge-icon">👥</div>
               <div>
-                <h4 class="card-title">Book a call</h4>
-                <p class="card-desc">15-minute fit check to see if I can help. We can dig into data sources and milestones together.</p>
-                <a class="button secondary" href="https://cal.com">Schedule</a>
+                <h4 class="card-title">LinkedIn</h4>
+                <p class="card-desc">DM works too. I’m actively applying and open to conversations.</p>
+                <a class="button secondary" href="https://www.linkedin.com/in/karthikheyaa" target="_blank" rel="noopener">Message on LinkedIn</a>
               </div>
             </div>
           </div>
@@ -169,10 +181,10 @@
 
     <footer class="footer">
       <div class="container footer-row">
-        <div>Build, Break, Fix, Repeat.</div>
+        <div>Ship pipelines. Validate data. Monitor runs.</div>
         <div class="nav-links">
           <a href="https://github.com/Karthikheyaa" target="_blank" rel="noopener">GitHub</a>
-          <a href="https://www.kaggle.com/karthikheyaa" target="_blank" rel="noopener">Kaggle</a>
+          <a href="https://www.linkedin.com/in/karthikheyaa" target="_blank" rel="noopener">LinkedIn</a>
           <a data-email-link>Email</a>
         </div>
       </div>
