Clean projects/notes copy and fix post dates

--- a/blog.html
+++ b/blog.html
@@ -32,9 +32,9 @@
       <section class="hero container">
         <div>
           <div class="tag">Notes</div>
-          <h1>Field notes, experiments, and lessons learned.</h1>
+          <h1>Notes</h1>
           <p class="section-subtitle">
-            A mix of case studies, how-tos, and reflections on building data products in fast-moving teams.
+            Short posts on data science and ML — what I learn as I build.
           </p>
           <div class="hero-cta">
             <a class="button secondary" data-email-link>Suggest a topic</a>
