--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Work · Karthikheyaa Kurra</title>
+    <title>Projects · Karthikheyaa Kurra</title>
     <link rel="icon" href="images/me.svg" type="image/svg+xml" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -31,10 +31,10 @@
     <main>
       <section class="hero container">
         <div>
-          <div class="tag">Work</div>
-          <h1>Case studies and data products in the wild.</h1>
+          <div class="tag">Projects</div>
+          <h1>Projects</h1>
           <p class="section-subtitle">
-            Practical projects that blend research, modeling, analytics, and reliable delivery.
+            Three projects I’m actively building: a batch platform, an execution layer, and a research codebase.
           </p>
           <div class="hero-cta">
             <a class="button" data-email-link>Discuss a build</a>
@@ -51,7 +51,7 @@
           <div class="section-header">
             <div>
               <p class="tag">Projects</p>
-              <h2 class="section-title">A mix of ML, analytics, and platform work</h2>
+              <h2 class="section-title">Active projects</h2>
             </div>
           </div>
           <div class="card-grid" data-projects></div>
