--- a/blog.html
+++ b/blog.html
@@ -32,12 +32,12 @@
       <section class="hero container">
         <div>
           <div class="tag">Notes</div>
-          <h1>Field notes, experiments, and lessons learned.</h1>
+          <h1>Notes</h1>
           <p class="section-subtitle">
-            A mix of case studies, how-tos, and reflections on building data products in fast-moving teams.
+            Short posts on data science and ML — what I learn as I build.
           </p>
           <div class="hero-cta">
-            <a class="button secondary" data-email-link>Suggest a topic</a>
+            <a class="button secondary" href="https://medium.com/@karthikheyaa" target="_blank" rel="noopener">Read on Medium</a>
           </div>
         </div>
         <div class="hero-card">
