--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/site.css" />
+    <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "a325f21397754ae098eb93bd623eb2fd"}'></script><!-- End Cloudflare Web Analytics -->
   </head>
   <body>
     <header class="site-header">
